# shugyou

./: .gitignore  Cargo.toml  GDFO.md  README.md  clippy.toml  deny.toml  justfile  lefthook.yml  tanren.yml  taplo.toml
.cargo/: config.toml
.claude/commands/: adhere-spec.md  adhere-task.md  audit-spec.md  audit-task.md  discover-standards.md  do-task.md  handle-feedback.md  index-standards.md  inject-standards.md  investigate.md  plan-product.md  resolve-blockers.md  run-demo.md  shape-spec.md  sync-roadmap.md  triage-audits.md  walk-spec.md
.config/: nextest.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/rulesets/: main.json
.github/workflows/: ci.yml  nightly.yml
.opencode/commands/: adhere-spec.md  adhere-task.md  audit-spec.md  audit-task.md  discover-standards.md  do-task.md  handle-feedback.md  index-standards.md  inject-standards.md  investigate.md  plan-product.md  resolve-blockers.md  run-demo.md  shape-spec.md  sync-roadmap.md  triage-audits.md  walk-spec.md
crates/game-command/: Cargo.toml
crates/game-content/: Cargo.toml
crates/game-domain/: Cargo.toml
crates/game-input/: Cargo.toml
crates/game-mcp/: Cargo.toml
crates/game-mod-api/: Cargo.toml
crates/game-net/: Cargo.toml
crates/game-observation/: Cargo.toml
crates/game-platform/: Cargo.toml
crates/game-presentation/: Cargo.toml
crates/game-replay/: Cargo.toml
crates/game-simulation/: Cargo.toml
crates/game-simulation/src/: lib.rs
scripts/: check_dependency_layers.sh  check_determinism_smoke.sh  check_line_length.sh  check_no_inline_suppressions.sh
xtask/: Cargo.toml
(+40 files in other folders)
