[workspace]
resolver = "2"
members = [
  "xtask",
  "crates/game-domain",
  "crates/game-command",
  "crates/game-observation",
  "crates/game-content",
  "crates/game-simulation",
  "crates/game-replay",
  "crates/game-presentation",
  "crates/game-input",
  "crates/game-net",
  "crates/game-mcp",
  "crates/game-mod-api",
  "crates/game-testing",
  "crates/game-platform",
  "bin/game",
  "bin/game-server",
  "bin/game-mcp",
  "bin/game-headless",
  "bin/game-balance",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
bevy = { version = "0.18.1" }
bevy_app = "0.18.1"
bevy_ecs = "0.18.1"
bevy_time = "0.18.1"
clap = { version = "4.5", features = ["derive"] }
rand = "0.9"
rand_chacha = "0.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
