[package]
name = "game-simulation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bevy_ecs.workspace = true
game-command = { path = "../game-command" }
game-content = { path = "../game-content" }
game-observation = { path = "../game-observation" }
rand.workspace = true
rand_chacha.workspace = true
